tests/miniJava/neg/004202_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java false extends java { }
